[fix] current info width fix on small breakpoint

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    min-width: 282px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     border-radius: 7px;
@@ -393,7 +394,7 @@ body {
 
 
 
-@media screen and (min-width: 570px) {
+@media screen and (min-width: 626px) {
     .current-info {
         -ms-flex-preferred-size: 50%;
             flex-basis: 50%;
